Feat: Assignment backend completed
