# backend/handlers/student/index.js
@@ -1,0 +1,11 @@
+import courseHandler from './course.js';
+import lectureHandler from './lecture.js';
+import scheduleHandler from './schedule.js';
+import assignmentHandler from './assignment.js';
+
+export default {
+  ...courseHandler,
+  ...lectureHandler,
+  ...scheduleHandler,
+  ...assignmentHandler
+}
